Fixed issue where margin appeared below the header on small/mobile screens

--- a/src/css/components/header.scss
+++ b/src/css/components/header.scss
@@ -25,6 +25,10 @@ nav {
           position: relative;
           padding: 5px;
         }
+
+        .sidenav-trigger {
+          height: 50px !important; //Prevents trigger from being taller than the header
+        }
       }
     }
   }
